<resources>
    <string name="app_name">ShoppingList</string>
    <string name="action_settings">Settings</string>
    <string name="back">Back</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="descriptionProduct">Product</string>
    <string name="listName">List Name</string>
    <string name="add_product">Add Product</string>
    <string name="products">Products</string>
    <string name="new_product">New Product</string>
    <string name="name">Name</string>
    <string name="obs">Obs</string>
    <string name="name_empty">Name can\'t be empty!</string>
    <string name="update_product">Update Product</string>
    <string name="new_list">New List</string>
    <string name="informations1">Federal University of Tecnology - Paraná</string>
    <string name="informations2">Version: 1.0.0</string>
    <string name="informations3">Development by: Dafny Garcia</string>
    <string name="info">Info</string>
    <string name="change_bg">Change Background Color</string>
    <string name="coral">Coral</string>
    <string name="cloud">Cloud</string>
    <string name="ype">Ype</string>
    <string name="pick_color">Pick a color:</string>
    <string name="transparent">Transparent</string>
    <string name="cancel">Cancel</string>
    <string name="sea">Sea</string>
    <string name="title_activity__new_list">Activity_NewList</string>
    <string name="newListName">New List Name</string>
    <string name="aviso">Alert</string>
    <string name="ok">OK</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="delete_product">Delete Product</string>
    <string name="deseja_realmente_apagar">You sure want to delete?</string>
    <string name="new_shopping_list">New Shopping List</string>
</resources>
